manifests/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: melpominee
  namespace: melpominee
spec:
  parentRefs:
    - name: melpominee-gateway
      sectionName: https
  hostnames:
    - melpominee.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: melpominee-backend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
